--- a/UW-Distinguished-Thesis/lay_abstract.tex
+++ b/UW-Distinguished-Thesis/lay_abstract.tex
@@ -1,53 +1,23 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Journal Article
-% LaTeX Template
-% Version 1.3 (9/9/13)
+% Lay Abstract
 %
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
 %
-% Original author:
-% Frits Wenneker (http://www.howtotex.com)
-%
-% License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %----------------------------------------------------------------------------------------
 %       PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
-\documentclass[paper=letter, fontsize=12pt]{article}
+\documentclass{article}
 \usepackage[english]{babel} % English language/hyphenation
-\usepackage{amsmath,amsfonts,amsthm} % Math packages
+\usepackage[sfdefault,light,condensed]{roboto}
 \usepackage[utf8]{inputenc}
-\usepackage{float}
-\usepackage{lipsum} % Package to generate dummy text throughout this template
-\usepackage{blindtext}
-\usepackage{graphicx} 
-\usepackage{caption}
-\usepackage{subcaption}
-\usepackage[sc]{mathpazo} % Use the Palatino font
-\usepackage[T1]{fontenc} % Use 8-bit encoding that has 256 glyphs
-\linespread{2} % Line spacing - Palatino needs more space between lines
-\usepackage{microtype} % Slightly tweak font spacing for aesthetics
+\linespread{2} % Line spacing 
 \usepackage[hmarginratio=1:1,top=32mm,columnsep=20pt]{geometry} % Document margins
-\usepackage{multicol} % Used for the two-column layout of the document
-%\usepackage[hang, small,labelfont=bf,up,textfont=it,up]{caption} % Custom captions under/above floats in tables or figures
-\usepackage{booktabs} % Horizontal rules in tables
-\usepackage{float} % Required for tables and figures in the multi-column environment - they need to be placed in specific locations with the [H] (e.g. \begin{table}[H])
-\usepackage{hyperref} % For hyperlinks in the PDF
-\usepackage{lettrine} % The lettrine is the first enlarged letter at the beginning of the text
-\usepackage{paralist} % Used for the compactitem environment which makes bullet points with less space between them
-\usepackage{abstract} % Allows abstract customization
-\renewcommand{\abstractnamefont}{\normalfont\bfseries} % Set the "Abstract" text to bold
-\renewcommand{\abstracttextfont}{\normalfont\small\itshape} % Set the abstract itself to small italic text
-\usepackage{titlesec} % Allows customization of titles
-
-\renewcommand\thesection{\Roman{section}} % Roman numerals for the sections
-\renewcommand\thesubsection{\Roman{subsection}} % Roman numerals for subsections
-
-\titleformat{\section}[block]{\large\scshape\centering}{\thesection.}{1em}{} % Change the look of the section titles
-\titleformat{\subsection}[block]{\large}{\thesubsection.}{1em}{} % Change the look of the section titles
+\usepackage[colorlinks = true,
+            linkcolor = blue,
+            urlcolor  = blue,
+            citecolor = blue,
+            anchorcolor = blue]{hyperref} % For hyperlinks in the PDF
 \newcommand{\horrule}[1]{\rule{\linewidth}{#1}} % Create horizontal rule command with 1 argument of height
 \usepackage{fancyhdr} % Headers and footers
 \pagestyle{fancy} % All pages have headers and footers
@@ -74,13 +44,13 @@
 \maketitle % Insert title
 \thispagestyle{fancy} % All pages have headers and footers
 
-Our planet is teeming with microbes. A single gram of soil (less than a teaspoon) can contain hundreds of millions single-celled organisms, representing tens of thousands of different species. Microbes are everywhere. They colonize our skin, flourish in our guts, dominate the oceans, and even grow on our nuclear waste. Collectively, their biomass likely exceeds that of both plants and animals. It should be no surprise, then, that microbes have a profound impact on us and our planet. Individually and collectively these little creatures sculpt ecosystems and influence our health in fundamental ways, many of which we have yet to understand fully. 
+Our planet is teeming with microbes. A single gram of soil (less than a teaspoon) can contain hundreds of millions single-celled organisms, representing tens of thousands of different species. Microbes are everywhere. They colonize our skin, flourish in our guts, dominate the oceans, and even grow on nuclear waste. Collectively, their biomass likely exceeds that of both plants and animals. It should be no surprise, then, that microbes have a profound impact on us and our planet. Individually and collectively these little creatures sculpt ecosystems and influence our health in fundamental ways, many of which we have yet to understand fully. 
 
 The purpose of my dissertation was to build computer-based models to better understand how microorganisms function in different environments at a molecular level. To make the problem more tractable, I focused specifically on the process of transcription, whereby the levels of particular genes are increased or decreased. I decided to focus on transcription since it is well known that this is one of the first things to happen when cells sense a change in their environment. 
 
-Transcription is orchestrated by intricate molecular control networks that have been shaped and rewired gradually over evolutionary timescales to pair microbes with their habitats. Deciphering the control structures and subsequent dynamics of these so-called \textit{gene regulatory networks} has been a longstanding challenge in biology. My dissertation contributed to the field by providing a computational framework for reverse-engineering highly-accurate gene regulatory networks directly from widely-available, high-throughput measurements of all transcripts in a cell. I did this by combining state-of-the-art ensemble learning algorithms with graph-theoretic methods. For my dissertation, I constructed models for two very different kinds of microorganisms (one a Bacteria and the other an Archaea).  The models predicted a number of surprising programmed molecular events that I subsequently confirmed directly with experiments, including the environment-dependent internal segmentation of transcripts that encode several proteins called operons. Overall, my work suggests that microbial genomes are controlled in ways that are far more complex than people had previously imagined; yet it also demonstrates that we can predict when, where, and (to some extent) why these unexpected events occur if we use sophisticated computer-based tools to recast our intuition. 
+Transcription is orchestrated by intricate molecular control networks that have been shaped and rewired gradually over evolutionary timescales to pair microbes with their habitats. Deciphering the control structures and subsequent dynamics of these so-called \textit{gene regulatory networks} has been a longstanding challenge in biology. My dissertation contributed to the field by providing a computational framework for reverse-engineering highly-accurate gene regulatory networks directly from widely-available, high-throughput measurements of all transcripts in a cell. I did this by combining state-of-the-art ensemble learning algorithms with graph-theoretic methods. For my dissertation, I constructed models for two very different kinds of microorganisms (a bacteria and an archaea).  The models predicted a number of surprising programmed molecular events that I subsequently confirmed directly with experiments, including the environment-dependent internal segmentation of transcripts that encode several proteins called operons. Overall, my work suggests that microbial genomes are controlled in ways that are far more complex than people had previously imagined; yet it also demonstrates that we can predict when, where, and (to some extent) why these unexpected events occur if we use sophisticated computer-based tools to recast our intuition. 
 
-In popular culture and even scientific circles single-celled microrganisms are considered to be relatively \textit{"simple"}. In a sense, the stereotype is fair: their genomes are much smaller than ours; they encode far fewer genes; and, as their name implies, they consist of only a single-cell, rather than an complicated assembly of different cell types.  Yet, despite this relative simplicity, it is difficult to interpret, much less predict, how microbes will respond to new conditions at a molecular level. More fundamentally, we are still trying to decipher how the various traits we can observe are encoded in their genomes. If we did know their genetic basis, we could modify microbial genomes to alter their behavior, which would be a disruptive innovation for biotechnology and industry. My work suggests that there are few easy, universal "rules" for controlling expression of a microorganism's genome. Nevertheless, using the tools I established, we can build computer models that help tame some of this complexity, guiding our focus towards specific hypothesis and insights that would have been difficult or impossible to conceive in their absence.\\ 
+In popular culture and even scientific circles single-celled microrganisms are considered to be relatively \textit{"simple"}. In a sense, the stereotype is fair: their genomes are much smaller than ours; they encode far fewer genes; and, as their name implies, they consist of only a single-cell rather than an complicated assembly of different cell types.  Yet, despite this relative simplicity, it is difficult to interpret much less predict how microbes will respond to new conditions at a molecular level. More fundamentally, we are still trying to decipher how the various traits we can observe are encoded in their genomes. If we did know their genetic basis, we could modify microbial genomes to alter their behavior. This would be a disruptive innovation for biotechnology and industry. My work suggests that there are few easy, universal "rules" for controlling expression of a microorganism's genome. Nevertheless, using the tools I established, we can build computer models that help tame some of this complexity, guiding our focus towards specific hypothesis and insights that would have been difficult or impossible to conceive in their absence.\\ 
 
 \noindent In addition to conducting the primary research, I also built several online resources to help the community explore the models and produce models of their own. A comprehensive web resource (\href{http://egrin2.systemsbiology.net}{egrin2.systemsbiology.net}) and a suite of computational methods (\href{http://nbviewer.ipython.org/github/baliga-lab/egrin2-tools/blob/master/doc/index.ipynb}{github.com/baliga-lab/egrin2-tools}) have been made freely available to promote extension of these models.\\[1mm]
 
