--- a/UW-Distinguished-Thesis/lay_abstract.tex
+++ b/UW-Distinguished-Thesis/lay_abstract.tex
@@ -46,7 +46,7 @@
 
 Our planet is teeming with microbes. A single gram of soil (less than a teaspoon) can contain hundreds of millions single-celled organisms, representing tens of thousands of different species. Microbes are everywhere. They colonize our skin, flourish in our guts, dominate the oceans, and even grow on nuclear waste. Collectively, their biomass likely exceeds that of both plants and animals. It should be no surprise, then, that microbes have a profound impact on us and our planet. Individually and collectively these little creatures sculpt ecosystems and influence our health in fundamental ways, many of which we have yet to understand fully. 
 
-The purpose of my dissertation was to build computer-based models to better understand how microorganisms function in different environments at a molecular level. To make the problem more tractable, I focused specifically on the process of transcription, whereby the levels of particular genes are increased or decreased. I decided to focus on transcription since it is well known that this is one of the first things to happen when cells sense a change in their environment. 
+The purpose of my dissertation was to build computer-based models to better understand how microorganisms function in different environments at a molecular level. To make the problem more tractable, I focused specifically on the process of transcription, whereby the levels of particular genes are increased or decreased. I decided to focus on transcription since it is well established that the abundance of certain genes is one of the first things to change when cells sense changes in their environment. 
 
 Transcription is orchestrated by intricate molecular control networks that have been shaped and rewired gradually over evolutionary timescales to pair microbes with their habitats. Deciphering the control structures and subsequent dynamics of these so-called \textit{gene regulatory networks} has been a longstanding challenge in biology. My dissertation contributed to the field by providing a computational framework for reverse-engineering highly-accurate gene regulatory networks directly from widely-available, high-throughput measurements of all transcripts in a cell. I did this by combining state-of-the-art ensemble learning algorithms with graph-theoretic methods. For my dissertation, I constructed models for two very different kinds of microorganisms (a bacteria and an archaea).  The models predicted a number of surprising programmed molecular events that I subsequently confirmed directly with experiments, including the environment-dependent internal segmentation of transcripts that encode several proteins called operons. Overall, my work suggests that microbial genomes are controlled in ways that are far more complex than people had previously imagined; yet it also demonstrates that we can predict when, where, and (to some extent) why these unexpected events occur if we use sophisticated computer-based tools to recast our intuition. 
 
