--- a/UW-Distinguished-Thesis/technical_abstract.tex
+++ b/UW-Distinguished-Thesis/technical_abstract.tex
@@ -89,7 +89,7 @@
 
 \section{Introduction}
 
-Scientists have been trying to decode the contents of the genome even before the first report of the structure of DNA by Watson and Crick in 1953 \cite{watson_molecular_1953}. In 1986, efforts in this direction were greatly accelerated by the invention of automated DNA sequencing \cite{smith_fluorescence_1986}, which provided a technology capable of read genomes at a staggering rate \cite{check_hayden_technology:_2014}. Presently, investigators can use extensions of these technologies to address longstanding biological questions at an unprecedented scale, including: 
+Scientists have been trying to decode the contents of the genome for decades \cite{watson_molecular_1953}. In 1986, efforts in this direction were greatly accelerated by the invention of automated DNA sequencing \cite{smith_fluorescence_1986}, which provided a technology capable of reading genomes at a staggering rate \cite{check_hayden_technology:_2014}. Investigators currently use extensions of these technologies to address longstanding biological questions at an unprecedented scale, including: 
 
 
 {
@@ -116,10 +116,15 @@ The overarching goal of my work was to build quantitative models linking \textit
 
 \noindent I made progress towards this goal by developing genome-wide, data-driven models of transcriptional regulation in prokaryotes.  I decided to focus on transcriptional regulation because it is one of the first steps for extracting information from the genome.  The work was done in prokaryotes because they are tractable systems with relatively small genomes and a wide array of available genetic and molecular tools, allowing us to rapidly profile them in the lab and reducing computational requirements. I was able to demonstrate experimentally that these models are both highly-accurate and predictive. 
 
-My original dissertation contained five primary sections: (1) a thorough review of prokaryotic gene regulatory mechanisms, with an emphasis on modularity in biological regulatory systems, (2) a description of existing approaches to reverse-engineer gene regulatory networks from high-throughput experimental data, (3) a detailed overview of the computational approaches developed, (4) a presentation of the successes (and limitations) of these new approaches, with an emphasis on how microbes leverage condition-specific TF-gene interactions to coordinate genomic expression, and, finally, (5) a discussion of the implications of these results for understanding the function and evolution of gene regulatory networks (GRNs).  
+My original dissertation contained five primary sections: (1) a thorough review of prokaryotic gene regulatory mechanisms, with an emphasis on modularity in biological regulatory systems, (2) a description of existing approaches to reverse-engineer gene regulatory networks from high-throughput experimental data, (3) a detailed overview of the computational approaches developed, (4) a presentation of the successes (and limitations) of these new approaches, with an emphasis on how microbes leverage condition-specific TF-gene interactions to coordinate genomic expression, and, finally, (5) a discussion of the implications of these results for understanding the function and evolution of gene regulatory networks (GRNs).  \vspace{1mm}
 
-We\footnote{I will use the pronoun `we' to emphasize the collaborative nature of this research} were able to infer comprehensive and accurate GRNs directly from gene expression data for two microbes. We demonstrated how these networks refine our understanding of modular gene co-regulatory organization in prokaryotes. We introduce a new concept for genetic co-regulation, the co-regulated module or \textit{corem}. Organization of genes into corems better describes how functions, pathways, and regulatory mechanisms are organized to influence cellular fitness.
-
+Notable achievements of my work include: 
+\begin{itemize}
+	\item Inference of accurate GRNs directly from gene expression data for two microbes
+	\item Introduction of a new concept for genetic co-regulation, the co-regulated module or \textit{corem}.
+	\item Dissemination of a computational framework that can be applied to generate similar networks for any sequenced microorganism
+\end{itemize}
+\vspace{1mm}
 In this dissertation abstract, I will first provide a short background on gene regulation in prokaryotes. Thereafter, I will quickly summarize the methods we developed, highlight several key results, and briefly describe the significance and implications of our findings. 
 
 \section{Why and how do microbes regulate their genomes?}
@@ -134,7 +139,7 @@ Proteins called transcription factors (TFs) regulate the initiation of transcrip
 
 \section{Regulation at a systems scale: gene regulatory networks (GRNs)}
 
-One of the goals of systems biology is to determine what sequences a TF prefers to bind, as well as where and when it binds across the genome for every TF. This entails an array of regulatory interactions that can be cataloged, visualized, and analyzed as gene regulatory networks (GRNs). GRNs are a mathematical representation of interactions between genes and TFs. These networks are represented as a $n \times m$ matrix, where $n$ are genes, $m$ are TFs, and the value at $X_{n,m}$ can represent presence/absence of an interaction or more complex information about the association. Topological analysis of GRNs can reveal important features related to how cells process information \cite{barabasi_network_2004}. For example, it has been suggested that TF regulatory networks are hierarchical \cite{yu_genomic_2006}. In this model, a few "master" TFs propagate a regulatory cascade that ends in the activation or repression of many "lower-tier" TFs, which are responsible for the majority of transcriptional changes. An immediate prediction of this model is that global gene expression profiles will be more sensitive to removal of TFs at the top of the regulatory cascade compared to the bottom. These and other predictions leveraged from the topology of these networks can be tested directly through experimentation. 
+One of the goals of systems biology is to determine what sequences a TF prefers to bind, as well as where and when it binds GREs throughout the genome for every TF. This results in an array of regulatory interactions that can be cataloged, visualized, and analyzed as gene regulatory networks (GRNs). GRNs are a mathematical representation of interactions between genes and TFs. These networks are represented as a $n \times m$ matrix, where $n$ are genes, $m$ are TFs, and the value at $X_{n,m}$ can represent presence/absence of an interaction or more complex information about the association. Topological analysis of GRNs can reveal important features related to how cells process information \cite{barabasi_network_2004}. For example, it has been suggested that TF regulatory networks are hierarchical \cite{yu_genomic_2006}. In this model, a few "master" TFs propagate a regulatory cascade that ends in the activation or repression of many "lower-tier" TFs, which are responsible for the majority of transcriptional changes. An immediate prediction of this model is that global gene expression profiles will be more sensitive to removal of TFs at the top of the regulatory cascade compared to the bottom. These and other predictions leveraged from the topology of these networks can be tested directly through experimentation. 
 
 Building comprehensive GRNs from experimental evidence, however, is intensive and expensive. While new technologies will provide faster and less costly alternatives, there is currently a demand to infer these networks directly from genome sequence and transcriptome data, which are less expensive to collect and widely available for a number of organisms. 
 
@@ -142,7 +147,7 @@ Building comprehensive GRNs from experimental evidence, however, is intensive an
 
 Towards the goal of developing methods to infer accurate GRNs from indirect gene expression measurements, we engineered a novel computational framework based on the \cm\ integrated biclustering algorithm originally described in \cite{reiss_integrated_2006}. \cm\ detects putatively modules of genes that tightly co-expression in a subset of the available gene expression measurements directly from the expresion data and genome sequence (Figure \ref{fig:bicluster}). These modules are constrained by sequence information (\textit{de novo} identification of conserved GREs in gene promoters), and functional association networks. The defining characteristic of \cm\ is that it combines all three types of data (expression, GREs and networks) together into an integrated model. It uses a stochastic optimization procedure to identify modules that best satisfy all three constraints, simultaneously.
 
-We deployed \cm\ as an ensemble learning framework, ultimately modeling the condition-specific global transcriptional state of the cell as a function of combinations of transient TF-based control mechanisms acting at intergenic and intragenic promoters across the entire genome. For each model, we aggregated predicted co-regulatory associations across genes, GREs, and environments from many individual \cm\ models that were each trained on a subset of the available gene expression data. Ensemble methods have become increasingly popular in a number of contexts recently given their reported ability to reduce model variance and overfitting \cite{seni_ensemble_2010}. 
+We deployed \cm\ as an ensemble learning framework, ultimately modeling the condition-specific global transcriptional state of the cell as a function of combinations of transient TF-based control mechanisms acting at intergenic and intragenic promoters across the entire genome. Ensemble methods have become increasingly popular in a number of contexts recently given their reported ability to reduce model variance and overfitting \cite{seni_ensemble_2010}. For each model, we aggregated predicted co-regulatory associations across genes, GREs, and environments from many individual \cm\ models that were each trained on a subset of the available gene expression data. 
 
 The final \egrine~ensemble or EGRIN 2.0 was constructed and mined using additional model aggregation and compilation procedures (Figure \ref{fig:egrin2:1}). These include, motif clustering \cite{van_dongen_using_2012} and scanning \cite{bailey_methods_1998}; gene co-regulation network construction and backbone extraction \cite{serrano_extracting_2009}; and network community detection \cite{ahn_link_2010}. These methods were used to identify GREs and their genome-wide locations, gene-gene co-regulatory associations, and corems, respectively.\\
 
@@ -220,11 +225,13 @@ High quality GRNs need to be both comprehensive (high recall) and accurate (high
 
 Some of the GREs discovered in \egrine~occur in non-canonical locations and lead to unexpected transcriptional behaviors, such as the subdivision of operons into multiple transcriptional units.  It was previously reported that the \halo transcriptome structure is modulated extensively by transcriptional elements located within operons and coding regions \cite{koide_prevalence_2009}. \egrine~recapitulated this phenomenon by sub-dividing operon genes into different corems. In all, the model predicted that nearly one-third of all \halo operons generate multiple transcript isoforms. Nearly half of these predictions of conditional operon structures were corroborated by experimentally mapped transcriptional breaks (hypergeometric pval = $4.2\times10^{-3}$; \cite{koide_prevalence_2009}). Often, these transcript boundaries were adjacent to GREs that coincide with experimentally determined TFB-binding sites (\cite{facciotti_general_2007}; Figure \ref{fig:egrin2:3:A}), reinforcing the accuracy of \egrine~predictions.
 
-We further investigated whether \egrine~provides insight into downstream consequences of differentially regulating multiple transcript isoforms from the same operon. The \textit{dppAB1C2-oppD2-ykfD-VNG2342H} operon in \halo encodes an ATP-dependent dipeptide transporter. Some periplasmic binding proteins (like \textit{dppA}) have the reported ability to function in conjunction with different ABC transport systems, giving support to the hypothesis that \textit{dppA} can be regulated independently \cite{higgins_binding_1990}. Despite high co-expression of the entire operon in the training data (mean R$^{2}$ = 0.6 across 1495 conditions), \egrine~predicted that the genes of this operon are transcribed as three different isoforms, each co-regulated with genes of a different corem. These predicted isoforms were verified by experimentally mapped transcript boundaries (Figure \ref{fig:egrin2:3:A}). Each of these corems contains a different dpp isoform and is enriched for a different biological function, including vitamin biosynthesis, porphyrin metabolism, and purine biosynthesis, respectively (Figure \ref{fig:egrin2:3:B}). Predicted differential regulation of the core permease (\textit{dppB1C2-oppD2-ykfD-VNG2342H}) with porphyrin metabolism genes in the permease corem is consistent with the reported capability of this transporter system to uptake heme when it functions with a different solute binding protein (i.e., without \textit{dppA}; \cite{letoffe_housekeeping_2006}). Overall, \egrine~provided insight into the distinct environment-dependent functional associations of each transcript isoform.   
+We further investigated whether \egrine~provides insight into downstream consequences of differentially regulating multiple transcript isoforms from the same operon. The \textit{dppAB1C2-oppD2-ykfD-VNG2342H} operon in \halo encodes an ATP-dependent dipeptide transporter. Some periplasmic binding proteins (like \textit{dppA}) have the reported ability to function in conjunction with different ABC transport systems, giving support to the hypothesis that \textit{dppA} can be regulated independently \cite{higgins_binding_1990}. Despite high co-expression of the entire operon in the training data (mean R$^{2}$ = 0.6 across 1495 conditions), \egrine~predicted that the genes of this operon are transcribed as three different isoforms, each co-regulated with genes of a different corem. These predicted isoforms were verified by experimentally mapped transcript boundaries (Figure \ref{fig:egrin2:3:A}). Each of these corems contains a different \textit{dpp} isoform and is enriched for a different biological function, including vitamin biosynthesis, porphyrin metabolism, and purine biosynthesis, respectively (Figure \ref{fig:egrin2:3:B}). Predicted differential regulation of the core permease (\textit{dppB1C2-oppD2-ykfD-VNG2342H}) with porphyrin metabolism genes in the permease corem is consistent with the reported capability of this transporter system to uptake heme when it functions with a different solute binding protein (i.e., without \textit{dppA}; \cite{letoffe_housekeeping_2006}). Overall, \egrine~provided insight into the distinct environment-dependent functional associations of each transcript isoform.   
 
 \section{Significance, Implications and Future Directions}
 
 \egrine~explains how microbes tailor transcriptional responses to varied environments by modeling the genome-wide distribution of GREs, their organization within each promoter, and the consequences of their activities across the genome. The integrative model reveals regulatory mechanisms for reuse of genes in varying combinations, linking distinct molecular pathways. Corems represent a fundamental organizing principle of GRNs that captures fitness-relevant associations among genes, forging a link between the environment-dependent dynamics of transcriptional control and phenotype. 
+
+The computational framework can be applied to any sequenced microorganism with transcriptome measurements. As such, it can be applied to understudied organisms that are of interest to biotechnology. While the algorithms developed here model transcription specifically, the integrative, ensemble learning and community detection algorithms can be applied generally to other biological models. A comprehensive web resource (\href{http://egrin2.systemsbiology.net}{egrin2.systemsbiology.net}) and a suite of computational methods (\href{http://nbviewer.ipython.org/github/baliga-lab/egrin2-tools/blob/master/doc/index.ipynb}{github.com/baliga-lab/egrin2-tools}) have been made freely available to promote extension of these models.   
 
 %----------------------------------------------------------------------------------------
 %       BIBLIOGRAPHY SECTION
